# niiLISP

./: .gitmodules  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE.md  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  build.rs  deny.toml
.claude/: settings.json
.claude/skills/niilisp-release-prep/: SKILL.md
.github/workflows/: ci.yml  release-binaries.yml  release.yml
docs/: CURRENT_WORK.md
docs/adr/: 0001-compatibility-posture.md  0002-licensing-and-lineage.md  0003-derivation-posture.md  0004-implementation-language-rust.md  0005-vec-backed-lists.md  0006-dynamic-scope-mechanism.md  0007-evaluator-tree-walk-with-cache.md  0008-v1-scope.md  0009-v1-acceptance-corpus.md  0010-foop-object-model.md  0011-error-model.md  0012-reader-and-numeric-model.md  0013-string-representation-and-unicode.md  0014-concurrency-os-processes.md  0015-import-ffi.md  0016-value-representation-and-copy-strategy.md  0017-evaluator-dispatch-and-call-path.md  0018-ffi-build-and-packaging.md  0019-ffi-first-slice.md  0020-ffi-callback-slice.md  0021-ffi-memory-api-slice.md  0022-bigint-numeric-tower-slice.md  0023-array-value-type.md  0024-copy-on-write-values.md  0025-utf8-character-operations.md  0026-contexts-as-namespaces.md  0027-lambda-as-list-hybrid.md  0028-regex-and-unicode-case.md  0029-file-io-slice.md  0030-dictionary-context-as-hash.md  0031-external-processes.md  0032-cilk-fork-multitasking.md  0033-networking-sockets.md  0034-native-gui-fltk-helper.md  0035-repl-line-editing.md  0036-reference-and-query-model.md  0037-dates-and-times.md  0038-xml-and-json.md  0039-embedding-library-target.md  0040-embedding-hardening.md
docs/notes/: 20260704_newlisp-archive-manual-license.md  20260704_newlisp-peculiarities.md  20260704_rust-oro-retrospective.md  20260706_newlisp-gap-analysis.md  20260711_expand-uppercase-incompat-report.md
docs/notes/20260706_wikibook-coverage/: 01-the-basics.md  02-controlling-the-flow.md  03-lists.md  04-strings.md  05-apply-and-map.md  06-contexts.md  07-macros.md  08-working-with-numbers.md  09-dates-and-times.md  10-working-with-files.md  11-multitasking.md  12-working-with-xml.md  13-the-debugger.md  14-the-internet.md  15-more-examples.md  16-graphical-interface.md  README.md
docs/spec/: README.md  compatibility.md  functions.md  special-forms.md  syntax.md  types.md
examples/: embed.rs  fib.lsp  foop.lsp  gui-demo.lsp  hello.lsp
lib/: gui.lsp
src/: builtins.rs  date.rs  eval.rs  ffi.rs  fileio.rs  json.rs  lib.rs  main.rs  net.rs  printer.rs  process.rs  reader.rs  repl.rs  utf8.rs  value.rs  xml.rs
tests/: binding_forms.rs  builtin_semantics.rs  contexts.rs  curry_global.rs  dates.rs  embed.rs  ffi.rs  fileio.rs  gui.rs  list_query.rs  loop_idx.rs  process.rs  qa.rs  reference_query.rs  regex_captures.rs  series_factor.rs  xml_json.rs
