[package]
name = "niilisp"
version = "0.1.0"
edition = "2021"
description = "A re-implementation of the newLISP dialect, prioritising compatibility with existing newLISP assets."
license = "GPL-3.0-or-later"
repository = "https://github.com/zonuexe/niiLISP"
readme = "README.md"
authors = ["TypedDuck", "USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "newlisp", "interpreter", "scripting"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.80"
# Ship code + user docs only; agent/CI tooling and the vendored newLISP
# reference (a large GPLv3 submodule) are not part of the crate.
exclude = [
    "/.github",
    "/.claude",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/docs/notes",
    "/docs/agents",
    "/docs/CURRENT_WORK.md",
    "/references",
    "/tests",
]

[[bin]]
name = "niilisp"
path = "src/main.rs"

[features]
default = ["ffi"]
# `import`/FFI (ADR-0018/0019). Off via --no-default-features for a pure,
# safe, zero-native-dependency build.
ffi = ["dep:libloading", "dep:libffi"]

# FFI is Unix-only in the first slice (ADR-0018 revision): it links the system
# libffi, which is OS-provided on macOS/Linux. On non-Unix targets the `ffi`
# feature still builds but the FFI code is compiled out (see cfg in src/ffi.rs),
# so `cargo install` never breaks on Windows.
[target.'cfg(unix)'.dependencies]
# dlopen/dlsym + runtime-typed C calls; libffi links the system library.
libloading = { version = "0.8", optional = true }
libffi = { version = "3", optional = true, features = ["system"] }

[profile.release]
opt-level = 3
