[package]
name = "niilisp"
version = "0.2.0"
edition = "2021"
description = "A re-implementation of the newLISP dialect, prioritising compatibility with existing newLISP assets."
license = "GPL-3.0-or-later"
repository = "https://github.com/zonuexe/niiLISP"
readme = "README.md"
authors = ["TypedDuck", "USAMI Kenta <tadsan@zonu.me>"]
keywords = ["lisp", "newlisp", "interpreter", "scripting"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.80"
# Ship code + user docs only; agent/CI tooling and the vendored newLISP
# reference (a large GPLv3 submodule) are not part of the crate.
exclude = [
    "/.github",
    "/.claude",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/docs/notes",
    "/docs/agents",
    "/docs/CURRENT_WORK.md",
    "/references",
    "/tests",
]

[[bin]]
name = "niilisp"
path = "src/main.rs"

[features]
default = ["ffi", "bigint", "regex", "mt", "net"]
# `import`/FFI (ADR-0018/0019). Off via --no-default-features for a pure,
# safe, zero-native-dependency build.
ffi = ["dep:libloading", "dep:libffi"]
# Arbitrary-precision integers (ADR-0022), mirroring newLISP's compile-time
# bigint switch. Off via --no-default-features drops the num-* deps for a
# zero-dependency build; the `Value::Bigint` variant compiles out entirely.
bigint = ["dep:num-bigint", "dep:num-traits"]
# Regular expressions (ADR-0028): the pure-Rust `regex` crate (RE2-style, not
# PCRE). Off via --no-default-features drops the dependency and the
# `regex`/`regex-comp` builtins.
regex = ["dep:regex"]
# Fork-based multitasking / the Cilk API (ADR-0032): spawn/sync/abort/share/
# send/receive, fork/pipe/wait-pid, signal. Real Unix fork() of the interpreter
# via libc; Unix-only (the code is cfg'd out on non-Unix even when the feature
# is on, like ffi). Off via --no-default-features for a build without it.
mt = ["dep:libc"]
# Networking / `net-*` stream sockets (ADR-0033): connect/listen/accept/send/
# receive/select over TCP and Unix-domain sockets. Real sockets via libc; Unix-
# only (cfg'd out on non-Unix even when on). Off via --no-default-features.
net = ["dep:libc"]
# Native GUI helper (ADR-0034): builds the `niilisp-gui` fltk binary that the
# `gs:` module drives over a socket. Default OFF — the toolkit is a heavy,
# display-dependent, niche dependency confined to the helper binary; the
# interpreter never links it.
gui = ["dep:fltk"]

# Optional pure-Rust deps behind the features above (all cross-compile cleanly,
# unlike the system-libffi FFI slice).
[dependencies]
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
regex = { version = "1", optional = true }
# GUI toolkit for the `niilisp-gui` helper only (ADR-0034); never linked into
# the interpreter. Bundled build, so no system toolkit is required.
fltk = { version = "1.4", optional = true, features = ["fltk-bundled"] }

# The GUI helper binary — only built with the `gui` feature (ADR-0034). The
# interpreter (`src/main.rs`) is the default bin and never pulls fltk.
[[bin]]
name = "niilisp-gui"
required-features = ["gui"]

# FFI is Unix-only in the first slice (ADR-0018 revision): it links the system
# libffi, which is OS-provided on macOS/Linux. On non-Unix targets the `ffi`
# feature still builds but the FFI code is compiled out (see cfg in src/ffi.rs),
# so `cargo install` never breaks on Windows.
[target.'cfg(unix)'.dependencies]
# dlopen/dlsym + runtime-typed C calls; libffi links the system library.
libloading = { version = "0.8", optional = true }
libffi = { version = "3", optional = true, features = ["system"] }
# fork/pipe/waitpid/kill/mmap/socketpair for the Cilk API (ADR-0032, `mt`).
libc = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
